# storage-api-proxy-test

./: .dockerignore  .env.example  .gitignore  README.md  database.py  docker-compose.yml  execute_query.py  external_api.py  locks.py  main.py  pyproject.toml  requirements.txt  setup.py  workspace_management.py
.github/workflows/: ci-cd.yaml
deploy/: Dockerfile  cloudbuild.yaml  docker-compose.yml
docs/: design_instructions.md
scripts/: setup_environment.sh
src/: main.py
src/storage_api_proxy/api/: endpoints.py
src/storage_api_proxy/core/: config.py  logging.py  security.py
src/storage_api_proxy/schemas/: models.py
src/storage_api_proxy/services/: database.py  external_api.py  locks.py  query_executor.py  workspace_manager.py
tests/integration/: test_api.py
tests/unit/: test_workspace_manager.py
