[tool.poetry]
name = "sql-proxy-api"
version = "0.1.0"
description = "FastAPI proxy for executing SQL queries in workspaces"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.4.2"
snowflake-connector-python = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
check_untyped_defs = true 